# icrc37plus_token

./: .gitignore  Cargo.toml  README.md  add_admin.sh  browser-test.html  dfx.json  get_admins.js  get_admins.mjs  init.sh  manage_assets.js  minimal-test.js  package-lock.json  package.json  start-replica2.sh  test-canister.js  test_mint.sh
src/icrc37plus_token_backend/: Cargo.toml  icrc37plus_token_backend.did  jbducks_token_backend.did
src/icrc37plus_token_backend/src/: lib.rs
src/icrc37plus_token_frontend/: README.md  package.json  vite.config.js
src/icrc37plus_token_frontend/jbducks_token_frontend/: package.json
src/icrc37plus_token_frontend/jbducks_token_frontend/src/: App.js  asset_manager.js  index.js
src/icrc37plus_token_frontend/src/: app.css
src/icrc37plus_token_frontend/src/lib/: config.ts  stores.ts  wallet.ts
src/icrc37plus_token_frontend/src/lib/components/: AdminPanel.svelte  AssetsPanel.svelte  TopBar.svelte
src/icrc37plus_token_frontend/src/routes/: +layout.svelte  +page.svelte
src/icrc37plus_token_frontend/src/routes/.well-known/appspecific/: +server.js
src/icrc37plus_token_frontend/src/routes/admin/: +page.svelte
temp_declarations/: br5f7-7uaaa-aaaaa-qaaca-cai.did.js
