[package]
name = "icrc37plus_token_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
# Cargo.toml dependencies:

candid = "0.8.4"
ic-cdk = "0.7.4"
ic-cdk-macros = "0.6.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ic-stable-structures = "0.5.6"
num-traits = "0.2"
num-derive = "0.3"
ic-certified-assets = "0.2.5"
base64 = "0.13.0"